[project]
name = "autonomous-driving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.15"
dependencies = [
    "carla>=0.9.16",
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.1",
    "umap-learn[plot]>=0.5.12",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
